[gd_scene load_steps=9 format=3 uid="uid://c7krcwyoak4cs"]

[ext_resource type="Script" path="res://scripts/marblebutton.gd" id="1_p0kjh"]
[ext_resource type="Texture2D" uid="uid://dvr3xhw1dxudh" path="res://art/Marble Tiles/Tile_A.png" id="2_hsnhx"]
[ext_resource type="Texture2D" uid="uid://fw13gobd7410" path="res://art/Marble Tiles/Tile_B.png" id="3_iobwh"]
[ext_resource type="FontFile" uid="uid://cshv7yax3y1kc" path="res://fonts/DIOGENES.ttf" id="3_rwhif"]
[ext_resource type="Texture2D" uid="uid://u7e3excshgvm" path="res://art/Marble Tiles/Tile_C.png" id="4_fy81s"]
[ext_resource type="Texture2D" uid="uid://bhspf74f3tm0y" path="res://art/Marble Tiles/Tile_D.png" id="5_233sy"]
[ext_resource type="Texture2D" uid="uid://xw55xkow1kd1" path="res://art/Marble Tiles/Tile_E.png" id="6_3mx51"]

[sub_resource type="LabelSettings" id="LabelSettings_brhd8"]
font = ExtResource("3_rwhif")
font_size = 68
font_color = Color(0.670588, 0.423529, 0.0313726, 1)

[node name="marblebutton" type="Node2D"]
script = ExtResource("1_p0kjh")
tile_sprites = Array[Resource]([ExtResource("2_hsnhx"), ExtResource("3_iobwh"), ExtResource("4_fy81s"), ExtResource("5_233sy"), ExtResource("6_3mx51")])

[node name="Node2D" type="Node2D" parent="."]

[node name="NinePatchRect2" type="NinePatchRect" parent="Node2D"]
offset_left = -199.0
offset_top = -45.0
offset_right = 212.0
offset_bottom = 66.0
texture = ExtResource("2_hsnhx")
region_rect = Rect2(20, 20, 540, 540)
patch_margin_right = 12
patch_margin_bottom = 15

[node name="NinePatchRect3" type="NinePatchRect" parent="Node2D"]
visible = false
offset_left = -188.0
offset_top = -33.0
offset_right = 223.0
offset_bottom = 78.0
scale = Vector2(0.973076, 0.859437)
texture = ExtResource("2_hsnhx")
region_rect = Rect2(20, 20, 520, 520)

[node name="Label" type="Label" parent="Node2D"]
offset_left = -200.0
offset_top = -45.0
offset_right = 199.0
offset_bottom = 50.0
label_settings = SubResource("LabelSettings_brhd8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="Node2D"]
modulate = Color(1, 1, 1, 0)
offset_left = -199.0
offset_top = -45.0
offset_right = 213.0
offset_bottom = 62.0

[connection signal="button_down" from="Node2D/Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Node2D/Button" to="." method="_on_button_button_up"]
[connection signal="mouse_entered" from="Node2D/Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Node2D/Button" to="." method="_on_button_mouse_exited"]
